--- a/main.html
+++ b/main.html
@@ -7,7 +7,32 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<header class="header">
+    <h1 class="hd-fnt">Shaw's News</h1>
+  </header>
+  <div id="maicont">
+    <div id="cont1" class=" latest-news-section margPadng bdy-fnt">
+      <h2 class="hd-fnt">Latest News Articles</h2>
+      <ul>
+        <li>Article 1</li>
+        <li>Article 2</li>
+        <li>Article 3</li>
+      </ul>
+    </div>
+    <div id="cont2" class="margPadng bdy-fnt">
+      <h2 class="hd-fnt">Main Article</h2>
+      <p class="">
+      <p class="">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id exercitationem sequi, consequuntur numquam natus corporis fugit veniam magnam reiciendis provident voluptatem maiores cumque nisi asperiores, libero velit hic eius repudiandae!
+      </p>
+    </div>
+    <div id="cont3" class="pictorial-news-section margPadng">
+      <h3 class="hd-fnt">Pictorial News</h3>
+      <a><img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg"></a>
+      <a><img src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG"></a>
+      <a><img src="https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG"></a>
+    </div>
+  </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
